# remortalite_site

./: .env.example  Dockerfile  app.py  config.py  pyproject.toml
data/: projects.json
templates/: base.html  index.html
